<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TapChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Tap Chat</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign up</string>
    <string name="signup_error_message">Please make sure you enter a email address and password.</string>
    <string name="sign_up_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Contacts</string>
    <string name="empty_inbox">No new messages!</string>
    <string name="empty_friends_label">No contacts go add some!</string>
    <string name="menu_edit_friends_label">Add Contacts</string>
    <string name="title_activity_edit_contacts">Edit Friends</string>
    <string name="error_title">There\'s been a error.</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your devices external storage</string>
    <string name="general_error">Sorry there was an error!</string>
    <string name="video_file_size_warning">The selected video my be less that 10mb for now sorry!</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected file is to large for now sorry!</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="title_activity_test_send_delete">testSendDELETE</string>
    <string name="contacts_send">Send</string>
    <string name="error_selecting_file">There was an error sending that file. Please try again.</string>
    <string name="sorry">Sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error on the backend please try again!</string>
    <string name="title_activity_view_image">Image</string>
    <string name="username_label">Username</string>
    <string name="error_username_required">Please enter a username</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="message_elipses">Message...</string>
    <string name="title_activity_list_users">ListUsersActivity</string>
    <string name="chat_label">Chat</string>

</resources>
