<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uk.co.jackdh.tapchat.MainActivity">

    <item android:id="@+id/action_camera" android:title="@string/menu_camera_label"
        android:orderInCategory="100" android:icon="@drawable/ic_action_camera" app:showAsAction="always" />

    <item android:id="@+id/action_edit_friends" android:title="@string/menu_edit_friends_label"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/test_fragment" android:title="Test area."
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_logout" android:title="@string/menu_logout_label"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
