<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context="uk.co.jackdh.tapchat.SignUpActivity"
android:background="@color/primary_material_light"
    android:orientation="vertical">


    <ProgressBar android:id="@+id/signup_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone"
        android:layout_gravity="center_horizontal" />
    <!-- Login progress -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/signup_form">

            <LinearLayout
                android:id="@+id/email_signup_form"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userName"
                android:layout_above="@+id/emailField"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/username_label" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/emailField"
                android:hint="@string/email_hint"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordField"
                android:hint="@string/password_hint"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_button_label"
                android:id="@+id/signupButton"
                android:layout_below="@+id/passwordField"
                android:layout_centerHorizontal="true" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
